third_party/rust/chromium_crates_io/vendor/zerocopy-v0_8/tests/ui-nightly/transmute-ref-src-not-intobytes.stderr
error[E0277]: the trait bound `Src: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-nightly/transmute-ref-src-not-intobytes.rs:23:33
   |
23 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                                 |
   |                                 the trait `zerocopy::IntoBytes` is not implemented for `Src`
   |                                 required by a bound introduced by this call
   |
   = note: Consider adding `#[derive(IntoBytes)]` to `Src`
   = help: the following other types implement trait `zerocopy::IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
           and $N others
note: required by a bound in `AssertSrcIsIntoBytes`
  --> tests/ui-nightly/transmute-ref-src-not-intobytes.rs:23:33
   |
23 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsIntoBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `Src: zerocopy::IntoBytes` is not satisfied
  --> tests/ui-nightly/transmute-ref-src-not-intobytes.rs:23:33
   |
23 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `zerocopy::IntoBytes` is not implemented for `Src`
   |
   = note: Consider adding `#[derive(IntoBytes)]` to `Src`
   = help: the following other types implement trait `zerocopy::IntoBytes`:
             ()
             AU16
             AtomicBool
             AtomicI16
             AtomicI32
             AtomicI64
             AtomicI8
             AtomicIsize
           and $N others
note: required by a bound in `AssertSrcIsIntoBytes`
  --> tests/ui-nightly/transmute-ref-src-not-intobytes.rs:23:33
   |
23 | const SRC_NOT_AS_BYTES: &AU16 = transmute_ref!(&Src(AU16(0)));
   |                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertSrcIsIntoBytes`
   = note: this error originates in the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
